Add API controller interfaces and implementations

--- a/ToDoListApp.Api/appsettings.json
+++ b/ToDoListApp.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "Token": "4b6f522a1f624b06e97b200bb3edb917"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
